--- a/src/frontend/assets/styles/engine.css
+++ b/src/frontend/assets/styles/engine.css
@@ -1,43 +1,40 @@
-.boardListing
-{
-	padding: 10px;
-	cursor: pointer;
+.boardListing {
+  padding: 10px;
+  cursor: pointer;
 }
 
-.boardListTitle{
-	text-decoration: none;
-	color:#455A64;
-	margin-left:5px;
-	font-family: Roboto, sans-serif;
-	font-size:1.3rem;
-	font-weight:lighter;
-	display: inline-block;
+.boardListTitle {
+  text-decoration: none;
+  color: #455A64;
+  margin-left: 5px;
+  font-family: Roboto, sans-serif;
+  font-size: 1.3em;
+  font-weight: lighter;
+  display: inline-block;
 }
 
-.appBarTitle
-{
-	color: white;
-	font-family: Roboto, sans-serif;
-	text-decoration: none;
-	font-size:1.7rem;
-	font-weight:300;
+.appBarTitle {
+  color: #333;
+  font-family: Roboto, sans-serif;
+  text-decoration: none;
+  font-size: 1em;
+  font-weight: 300;
 }
 
 /********************* FlexGrid *************/
-.flex-board{
-	font-family: Roboto, sans-serif;
+.flex-board {
+  font-family: Roboto, sans-serif;
 }
 
 .flex-row-container {
   display: -webkit-flex; /* Safari */
   display: flex;
-   -webkit-flex-flow: row nowrap; /* Safari */
+  -webkit-flex-flow: row nowrap; /* Safari */
   flex-flow: row nowrap;
-   -webkit-justify-content: center; /* Safari */
-  justify-content:         center;
+  -webkit-justify-content: center; /* Safari */
+  justify-content: center;
   -webkit-align-items: stretch; /* Safari */
-  align-items:         stretch;
-
+  align-items: stretch;
   background: #FFF;
   overflow: hidden;
   width: 100%;
@@ -49,13 +46,12 @@
 .flex-header-row-container {
   display: -webkit-flex; /* Safari */
   display: flex;
-   -webkit-flex-flow: row nowrap; /* Safari */
+  -webkit-flex-flow: row nowrap; /* Safari */
   flex-flow: row nowrap;
-   -webkit-justify-content: center; /* Safari */
-  justify-content:         center;
+  -webkit-justify-content: center; /* Safari */
+  justify-content:center;
   -webkit-align-items: stretch; /* Safari */
-  align-items:         stretch;
-
+  align-items: stretch;
   background: #FFF;
   overflow: hidden;
   width: 100%;
@@ -65,49 +61,44 @@
 .flex-column-container {
   display: -webkit-flex; /* Safari */
   display: flex;
-   -webkit-flex-flow: column nowrap; /* Safari */
+  -webkit-flex-flow: column nowrap; /* Safari */
   flex-flow: column nowrap;
-   -webkit-justify-content: center; /* Safari */
-  justify-content:         center;
+  -webkit-justify-content: center; /* Safari */
+  justify-content: center;
   -webkit-align-items: stretch; /* Safari */
-  align-items:         stretch;
-
+  align-items: stretch;
   background: #FFF;
 }
 
-.flex-board-column{
-  width:33%;	
+.flex-board-column {
+  width:33%;
   -webkit-flex: 1 0 auto; /* Safari */
   flex: 1 0 auto;
   box-shadow: 0 0px 2px rgba(0, 0, 0, 0.15);
 }
 
-.flex-board-header
-{
+.flex-board-header {
  -webkit-flex: 1 0 auto; /* Safari */
   flex: 1 0 auto;
-  	font-size:1.0rem;
-	font-weight:100;
-	color: #9E9E9E;		
+  font-size:1.0rem;
+  font-weight:100;
+  color: #9E9E9E;
 }
 
-.flex-board-searchbox
-{
-	padding-top: 20px;
+.flex-board-searchbox {
+  padding-top: 20px;
 }
 
-.board-title
-{
-	font-size:1.5rem;
-	font-weight:100;
-	color: #9E9E9E;
-	margin-bottom: 40px;
+.board-title {
+  font-size:1.5rem;
+  font-weight:100;
+  color: #9E9E9E;
+  margin-bottom: 40px;
 }
 
-.board-search-icon
-{
-	position: relative;
-	bottom: -5px;
+.board-search-icon {
+  position: relative;
+  bottom: -5px;
 }
 
 /****************** End FlexGrid ************/
