--- a/src/frontend/assets/styles/engine.css
+++ b/src/frontend/assets/styles/engine.css
@@ -3,11 +3,15 @@
   cursor: pointer;
 }
 
-.boardListTitle {
+a {
   text-decoration: none;
   color: #455A64;
-  margin-left: 5px;
   font-family: Roboto, sans-serif;
+  font-weight: lighter;
+}
+
+.boardListTitle {
+  margin-left: 5px;
   font-size: 1.3em;
   font-weight: lighter;
   display: inline-block;
