--- a/src/frontend/assets/styles/engine.css
+++ b/src/frontend/assets/styles/engine.css
@@ -10,7 +10,7 @@ a {
   font-weight: lighter;
 }
 
-.boardListTitle {
+.boardListName {
   margin-left: 5px;
   font-size: 1.3em;
   font-weight: lighter;
